<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="choose_your_role">Choose your role</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="student_image_description">The picture of Student</string>
    <string name="teacher_image_description">The Picture of Teacher</string>

    <!-- activity_registration.xml -->
    <string name="register_title">Register</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="prompt_already_have_account">Hey, been here before?</string>
    <string name="action_login">Login</string>

    <!-- activity_login.xml -->
    <string name="label_login">Login</string>
    <string name="label_have_not_registered_yet">New to our app?</string>
    <string name="action_register">Register quickly</string>

    <string name="invalid_email_message">Please enter a valid email address.</string>
    <string name="invalid_username_message">Username should be at least 5 characters long.</string>
    <string name="invalid_password_message">Password should be at least 6 characters long.</string>
    <string name="registration_failed_message">Registration failed. Try again!</string>

    <!-- login.xml -->
    <string name="enter_email">Please enter email</string>
    <string name="enter_password">Please enter password</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="choose_account_type">You\'ve got two accounts: Choose the one</string>
    <string name="no_role_found">No role found for user: %1$s</string>
    <string name="error_fetching_data">Error fetching data. Please try again.</string>

    <!-- fragment_interests.xml -->
    <string name="interests_label">What would you like to learn?</string>

    <!-- fragment_age.xml -->
    <string name="onboarding_age_label">Your age</string>

    <!-- fragment_daily_study.xml -->
    <string name="onboarding_daily_study_goal">Your Daily Study Goal</string>
    <string name="onboarding_minutes">minutes</string>

    <!-- Arrays for dialog options -->
    <array name="roles_array">
        <item>Student</item>
        <item>Teacher</item>
    </array>
</resources>